feat: Introduce Auto Schedule Phase S3 with enhanced selection logic
- Added new error code for selection invariant violations.
- Updated E2E tests to validate new selection behavior and ensure consistency across phases.
- Implemented unit tests for revalidation service to reject overlapping selected items.
- Enhanced preview generation tests to handle new strategy version and selection invariants.
- Introduced detailed documentation for Auto Schedule Phase S3, outlining selection objectives, greedy behavior replacement, service date handling, and performance metrics.